--- a/config/application.yml
+++ b/config/application.yml
@@ -1,1 +1,3 @@
-CLOUDINARY_URL: cloudinary://345988584121794:CXi4Vpa3mW5d0BUpIW7DacMW8ds@dib2nyadi
+CLOUDINARY_URL: "cloudinary://345988584121794:CXi4Vpa3mW5d0BUpIW7DacMW8ds@dib2nyadi"
+GOOGLE_API_BROWSER_KEY: "AIzaSyCLKaCHWGiDE1p43Mfm1BMNsKHk_OrXYqw"
+GOOGLE_API_AUTOCOMPLETE_KEY: "AIzaSyDbQr0FXzWM48URAoZcyKALLMUA11MTZP0"
